; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_pause_can_start.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_pause_can_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pause_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pause_data*)* @pause_can_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pause_can_start(%struct.pause_data* %0) #0 {
  %2 = alloca %struct.pause_data*, align 8
  store %struct.pause_data* %0, %struct.pause_data** %2, align 8
  %3 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %4 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %13, label %7

7:                                                ; preds = %1
  %8 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %9 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  br label %13

13:                                               ; preds = %7, %1
  %14 = phi i1 [ false, %1 ], [ %12, %7 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
